<resources>
    <string name="app_name">chen1-reflex</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_single_user">SingleUserActivity</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="title_activity_two_players">TwoPlayers</string>
    <string name="title_activity_three_players">ThreePlayers</string>
    <string name="title_activity_four_players">FourPlayers</string>
    <string name="single_user">Single User Reaction Timer</string>
    <string name="gameshow_buzzer">Gameshow Buzzer Mode</string>
    <string name="statistics">Statistics</string>
    <string name="reaction_button_text">Buzz</string>
    <string name="email">Email the Statistics</string>
    <string name="clear_stat">Clear Statistics</string>
    <string name="two_player_one">Player 1</string>
    <string name="two_player_two">Player 2</string>
    <string name="three_player_one">Player 1</string>
    <string name="three_player_two">Player 2</string>
    <string name="three_player_three">Player 3</string>
    <string name="four_player_one">Player 1</string>
    <string name="four_player_two">Player 2</string>
    <string name="four_player_three">Player 3</string>
    <string name="four_player_four">Player 4</string>
    <string name="intro">Single User Mode:\nWhen "CLICK NOW" pops up, the player should click as soon as possible\nGameshow Buzz Mode:\nThe player who clicks the fastest wins</string>
</resources>
