<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.chen1.chen1_reflex.View.ThreePlayers">

    <Button
        android:layout_width="350dp"
        android:layout_height="140dp"
        android:text="@string/three_player_one"
        android:id="@+id/three_player_one"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:onClick="playerOne" />

    <Button
        android:layout_width="150dp"
        android:layout_height="340dp"
        android:text="@string/three_player_two"
        android:id="@+id/three_player_two"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:nestedScrollingEnabled="false"
        android:onClick="playerTwo" />

    <Button
        android:layout_width="150dp"
        android:layout_height="340dp"
        android:text="@string/three_player_three"
        android:id="@+id/three_player_three"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="playerThree" />

</RelativeLayout>
